Docs revision and bugfixes
